<?xml version="1.0"?>
<package format="2">
  <name>raw_keyboard_publisher</name>
  <version>0.0.0</version>
  <description>Generic keyboard teleop for twist robots.</description>

  <maintainer email="rohan@osrfoundation.org">Rohan Agrawal</maintainer>

  <license>BSD</license>


  <author>Graylin Trevor Jay</author>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
